--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.canalpromessas">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+
    <application
         android:label="Canal promessas"
         android:icon="@mipmap/ic_launcher">
