--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   url_launcher: ^6.0.6
   splashscreen: ^1.3.5
   flutter_native_splash: ^1.2.0
+  device_preview: ^0.7.3
 
 dev_dependencies:
   flutter_test:
